fix spacing in uni-logos

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -126,19 +126,6 @@ header h1 {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 5px 0 rgba(0, 0, 0, 0.1);
 }
 
-@media all and (max-width: 32em){
-    #TableOfContents {
-        font-size: 0.75em;
-    }
-    header h1 {
-        margin-bottom: -1.5em;
-        font-size: 2.0rem;
-    }
-    .me img {
-        display: none;
-    }
-}
-
 .content {
     padding: 1rem;
     margin: 0 auto;
@@ -271,4 +258,23 @@ footer p {
     height: auto;
     max-width: 12.5em;
     margin: 0;
+}
+
+@media all and (max-width: 32em){
+    #TableOfContents {
+        /* font-size: 0.75em; */
+    }
+    header h1 {
+        margin-bottom: -1.5em;
+        font-size: 2.0rem;
+    }
+    .me img {
+        display: none;
+    }
+    .logo img {    
+        width: 15%;
+        vertical-align: middle;
+        padding-left: 0.5em;
+        padding-right: 0.5em;
+    }
 }
